# Theta

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build-windows.sh  build.sh  build_clang.sh  format.sh  theta.cpp  version.h
.github/workflows/: cmake-linux.yml  cmake-osx.yml  cmake-single-platform-linux.yml  cmake-single-platform.yml
doc/: gc_process.md  theta_grammar.bnf
fixtures/: FunctionDefinition.th  ListDefinition.th  StringUtil.th  test.th
patches/: v8_buildscript_patch.diff  v8_typename_patch.diff
scripts/: build_v8.sh  fetch_v8.sh
src/cli/: CLI.cpp  CLI.hpp  REPL.cpp  REPL.hpp  cli.cpp
src/compiler/: ASTPreprocessor.cpp  ASTPreprocessor.hpp  CodeGen.cpp  CodeGen.hpp  Compiler.cpp  Compiler.hpp  DataTypes.hpp  FunctionMetaData.hpp  Pointer.hpp  StandardLibrary.hpp  SymbolTable.hpp  SymbolTableStack.hpp  ThetaCompiler.cpp  ThetaCompiler.hpp  TypeChecker.cpp  TypeChecker.hpp  WasmClosure.hpp  compiler.cpp  compiler.hpp
src/compiler/optimization/: LiteralInlinerPass.cpp  LiteralInlinerPass.hpp  OptimizationPass.cpp  OptimizationPass.hpp
src/errors/: syntaxerror.hpp
src/exceptions/: CompilationError.hpp  Error.hpp  IllegalReassignmentError.hpp  IntegrityError.hpp  ParseError.hpp  ReferenceError.hpp  TypeError.hpp
src/gc/: FunctionFrame.cpp  GarbageCollector.cpp  HeapReference.hpp  ShadowStack.hpp
src/lexer/: Lexemes.hpp  Lexer.cpp  ThetaLexer.cpp  Token.cpp  Token.hpp  lexemes.hpp  lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parser/: Parser.cpp  ThetaParser.cpp  parser.cpp  parser_old.cpp
src/parser/ast/: ASTNode.cpp  ASTNode.hpp  ASTNodeList.hpp  AssignmentNode.hpp  BinaryOperationNode.hpp  BlockNode.hpp  CapsuleNode.hpp  ControlFlowNode.hpp  DictionaryNode.hpp  EnumNode.hpp  FunctionDeclarationNode.hpp  FunctionInvocationNode.hpp  IdentifierNode.hpp  KeyedAccessNode.hpp  LinkNode.hpp  ListNode.hpp  LiteralNode.hpp  ReturnNode.hpp  SourceNode.hpp  StructDeclarationNode.hpp  StructDefinitionNode.hpp  SymbolNode.hpp  TupleNode.hpp  TypeDeclarationNode.hpp  UnaryOperationNode.hpp  assignment_node.hpp  ast_node.hpp  binary_operation_node.hpp  block_node.hpp  capsule_node.hpp  dict_definition_node.hpp  function_declaration_node.hpp  identifier_node.hpp  keyed_access_node.hpp  link_node.hpp  list_definition_node.hpp  literal_node.hpp  source_node.hpp  symbol_node.hpp  tuple_node.hpp  (+2 more)
src/runtime/: ExecutionContext.hpp  Runtime.hpp
src/util/: exceptions.cpp  exceptions.hpp  tokens.hpp
src/wasm/: ThetaLangCore.wat
test/: CodegenTest.cpp  LexerTest.cpp  ParserTest.cpp  ThetaLexerTest.cpp  ThetaParserTest.cpp  TypeCheckerTest.cpp  lexer_test.cpp  parser_test.cpp
test/catch2/: catch_amalgamated.cpp  catch_amalgamated.hpp
test/fixtures/: Math.th  SimpleMathExpression.th  SimpleStruct.th  SimpleVariableDeclaration.th  StringTraversal.th  StringUtil.th
